# pyradiosky

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  environment.yaml  paper.bib  paper.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  new_feature.md  version_change.md
.github/original_pr_templates/: bug_fix.md  build_ci_change.md  documentation.md  new_feature.md  other.md  version_change.md
.github/workflows/: build_docs.yaml  externaltests.yaml  publish-to-test-pypi.yaml  testsuite.yaml
ci/: docs.yaml  full_deps.yaml  install_conda.sh  linting.yaml  min_deps.yaml  min_versions.yaml  publish.yaml  pyuvsim.yaml  tests.yaml
docs/: conf.py  conftest.py  developer_docs.rst  make_index.py  make_parameters.py  make_skymodel.py  skymodel.rst  skymodel_tutorial.rst  tutorial.rst  utility_functions.rst
docs/references/: skyh5_memo.tex
pyradiosky/: __init__.py  skymodel.py  spherical_coords_transforms.py  test.ipynb  utils.py
pyradiosky/data/: fhd_catalog.sav  fhd_catalog_with_beam_values.sav  gleam_50srcs.vot  gsm_galactic.skyh5  healpix_disk.skyh5  healpix_disk_new.hdf5
pyradiosky/tests/: __init__.py  conftest.py  test_skymodel.py  test_spherical_coords_transforms.py  test_utils.py
scripts/: download_gleam.py  make_flat_spectrum_eor.py
src/pyradiosky/: __init__.py  cli.py  skymodel.py  spherical_coords_transforms.py  utils.py
src/pyradiosky/data/: extended_source_test.sav  fhd_catalog_bad.sav  fhd_catalog_no_extend.sav  fhd_source_array.sav  gsm_icrs.skyh5  old_skyh5_point_sources.skyh5
tests/: conftest.py  test_skymodel.py  test_spherical_coords_transforms.py  test_utils.py
